<?xml version="1.0"?>
<package format="3">
  <name>caret_autoware_launch</name>
  <version>0.1.0</version>
  <description>The caret_autoware_launch package</description>

  <maintainer email="keita.miura@tier4.jp">Keita Miura</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- <exec_depend>tracetools<exec_depend> -->
  <exec_depend>autoware_launch</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
